--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@ rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
 rel="stylesheet"
 />
-    <title>React App</title>
+    <title>API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
